# PromptArt

./: ImageAnalysis.py  MoodAnalysis.py  Poem_Trans.py  Pu_Trans.py  README.md  WS.py  embedding_api.py  main.py  test.py
LLM/: spark_desk.py  spark_desk_embedding.py  web_interact.py
poemSpider/: scrapy.cfg
prompt/: content_get.py  content_get2.py  desc_expand.py  image_analysis.py  image_get.py  mood_analysis.py  poem_trans.py  pu_trans.py  pu_trans_match.py
prompts/: content_get.py  content_get2.json  (+9 more)
qqbot/: .env.prod  bot.py  pyproject.toml
qqbot/accounts/2726647030/: config.yml  device.json  session.token
qqbot/accounts/2726647030/data/images/: 000213.ldb  LOG  MANIFEST-000237
qqbot/accounts/2726647030/data/leveldb-v3/: 000280.ldb  000281.ldb  000284.ldb  000287.ldb  LOG  MANIFEST-000305
qqbot/accounts/2726647030/data/videos/: LOG  MANIFEST-000217
qqbot/accounts/2901179338/: config.yml  device.json  session.token
qqbot/accounts/2901179338/data/images/: 000002.ldb  000323.ldb  000326.ldb  000329.ldb  LOG  MANIFEST-000038  MANIFEST-000331
qqbot/accounts/2901179338/data/leveldb-v3/: 000047.ldb  000048.ldb  000051.ldb  000054.ldb  000417.ldb  000420.ldb  LOG  MANIFEST-000056  MANIFEST-000419
qqbot/accounts/2901179338/data/videos/: LOG  MANIFEST-000309
qqbot/accounts/binary/: accounts.json
qqbot/src/plugins/enter/: config.py
qqbot/src/plugins/history/: config.py
qqbot/src/plugins/img/: __init__.py  style.py
qqbot/src/plugins/mjprompt/: __init__.py  config.py
qqbot/src/plugins/style/: config.py
qqbot/src/plugins/test11/: config.py
(+13 files in other folders)
